Add flash and refactor h1 tags.
- Add flash messages to layout.
- Move h1 tags into layout and remove from individual pages.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,5 +9,8 @@
     = csrf_meta_tags
   %body
     = render partial: 'layouts/nav'
+    - flash.each do |key, value|
+      = content_tag :p, value, class: key
+    %h1= yield(:title)
     = yield
     = render partial: 'layouts/footer'
