--- a/app/views/layouts/_nav.html.haml
+++ b/app/views/layouts/_nav.html.haml
@@ -3,3 +3,8 @@
   = link_to 'Home', '/'
   |
   = link_to 'Deck Packs', deckpacks_path
+  |
+  - if user_signed_in?
+    = link_to 'Logout', destroy_user_session_path, method: :delete
+  - else
+    = link_to 'Login', new_user_session_path
